WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123671
[Cocoa] Wrappers mishandle NULL values in arrays and dictionaries
https://bugs.webkit.org/show_bug.cgi?id=123671
Summary
[Cocoa] Wrappers mishandle NULL values in arrays and dictionaries
mitz
Reported
2013-11-02 10:44:57 PDT
[Cocoa] Wrappers mishandle NULL values in arrays and dictionaries
Attachments
Represent NULL values by NSNull
(2.77 KB, patch)
2013-11-02 10:46 PDT
,
mitz
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2013-11-02 10:46:57 PDT
Created
attachment 215813
[details]
Represent NULL values by NSNull
Darin Adler
Comment 2
2013-11-02 14:24:12 PDT
Comment on
attachment 215813
[details]
Represent NULL values by NSNull It’s a little peculiar that we turn a nullptr into an NSNull on the way out, but we don’t turn an NSNull into a nullptr on the way in.
Darin Adler
Comment 3
2013-11-02 14:24:33 PDT
Comment on
attachment 215813
[details]
Represent NULL values by NSNull I guess maybe there’s no “way in” if these are immutable, so my comment was wrong.
WebKit Commit Bot
Comment 4
2013-11-02 14:54:16 PDT
Comment on
attachment 215813
[details]
Represent NULL values by NSNull Clearing flags on attachment: 215813 Committed
r158500
: <
http://trac.webkit.org/changeset/158500
>
WebKit Commit Bot
Comment 5
2013-11-02 14:54:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug