[Cocoa] Wrappers mishandle NULL values in arrays and dictionaries https://bugs.webkit.org/show_bug.cgi?id=123671

Reviewed by Darin Adler.

* Shared/Cocoa/WKNSArray.mm:
(-[WKNSArray objectAtIndex:]): Represent a NULL object as NSNull.
* Shared/Cocoa/WKNSDictionary.mm:
(-[WKNSDictionary objectForKey:]): Represent a NULL value as NSNull.
* Shared/ImmutableDictionary.h:
(WebKit::ImmutableDictionary::get): Added this overload that returns whether the key exists.


Canonical link: https://commits.webkit.org/141853@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158500 268f45cc-cd09-0410-ab3c-d52691b4dbfc